[package]
name = "crsf"
edition = "2021"
version = "2.0.1"
authors = ["Dicu Tudor <tudor@dicu.org>"]
license = "MIT"
description = "This crate provides a #[no_std] parser for the crossfire protocol."
repository = "https://github.com/tact1m4n3/crsf-rs"
documentation = "https://docs.rs/crsf"

[dependencies]
bitflags = "2.5.0"
crc = "3.2"
defmt = { version = "0.3.6", optional = true }
num_enum = { version = "0.7.2", default-features = false }
snafu = { version = "0.8.2", default-features = false }

[dev-dependencies]
serialport = "4.2.2"

[features]
defmt = ["dep:defmt"]
