[package]
name = "crsf"
edition = "2021"
version = "3.0.0"
authors = ["Dicu Tudor <tudor@dicu.org>"]
license = "MIT"
description = "This crate provides a `no-std` parser for the CRSF protocol."
keywords = ["crsf", "elrs"]
categories = [
    "no-std::no-alloc",
    "parsing",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles"
]
repository = "https://github.com/tact1m4n3/crsf-rs"
documentation = "https://docs.rs/crsf"

[dependencies]
crc = "3.2"
defmt = { version = "0.3.8", optional = true }
num_enum = { version = "0.7.3", default-features = false }
snafu = { version = "0.8.5", default-features = false }

[dev-dependencies]
serialport = "4.6"

[features]
defmt = ["dep:defmt"]
