[package]
name = "crsf"
edition = "2021"
version = "3.0.0"
authors = ["Dicu Tudor <tudor@dicu.org>"]
license = "MIT"
description = "This crate provides a `no-std` parser for the CRSF protocol."
keywords = ["crsf", "elrs"]
categories = [
    "no-std::no-alloc",
    "parsing",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles"
]
repository = "https://github.com/tact1m4n3/crsf-rs"
documentation = "https://docs.rs/crsf"

[dependencies]
bitfields = "1.0.0"
crc = "3.3"
defmt = { version = "1.0.1", optional = true }
num_enum = { version = "0.7.4", default-features = false }
snafu = { version = "0.8.6", default-features = false }

[dev-dependencies]
serialport = "4.7"

[features]
defmt = ["dep:defmt"]
